1. Add JWT security definitions 2. Update Swagger documentation
